<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/balanceFragment">

    <fragment
        android:id="@+id/balanceFragment"
        android:name="org.hierax.hsaplanner.BalanceFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_balance" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.hierax.hsaplanner.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/expensesFragment"
        android:name="org.hierax.hsaplanner.ExpensesFragment"
        android:label="@string/action_expenses"
        tools:layout="@layout/fragment_expense_list">
        <action
            android:id="@+id/action_expensesFragment_to_editExpensesFragment"
            app:destination="@id/editExpensesFragment" />
    </fragment>

    <fragment
        android:id="@+id/editExpensesFragment"
        android:name="org.hierax.hsaplanner.EditExpenseFragment"
        android:label="@string/action_edit_expense"
        tools:layout="@layout/edit_expense_fragment">
        <argument
            android:name="expenseId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>