<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".editexpense.EditExpenseFragment">

    <data>

        <variable
            name="fragment"
            type="org.hierax.hsaplanner.editexpense.EditExpenseFragment" />

        <variable
            name="viewModel"
            type="org.hierax.hsaplanner.editexpense.EditExpenseViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_expense_date"
                style="@style/Widget.HSAPlanner.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/expense_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_expense_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:maxLines="1"
                    android:text="@{viewModel.formatDate(viewModel.expenseDate)}"
                    tools:text="2021-01-01" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton_open_date_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/open_date_dialog"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="@id/textInputLayout_expense_date"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_expense_date"
                app:layout_constraintTop_toTopOf="@id/textInputLayout_expense_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_description"
                style="@style/Widget.HSAPlanner.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/expense_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_expense_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:text="@{viewModel.description}"
                    tools:text="Expense A" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_original_amount"
                style="@style/Widget.HSAPlanner.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/original_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_original_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{viewModel.formatAsMoney(viewModel.originalAmount)}"
                    tools:text="1000.00" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_remaining_amount"
                style="@style/Widget.HSAPlanner.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/remaining_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_original_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_remaining_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{viewModel.formatAsMoney(viewModel.remainingAmount)}"
                    tools:text="100.00" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>